# web_app

./: Cargo.toml  Procfile  state.json
src/: main.rs  process.rs  state.rs
src/json_serializaitions/: todo_items.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs  mod.rs  pending.rs
src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/: mod.rs  path.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/item/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
