[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {version = "1.0", default-features = false, features = ["alloc"]}
futures = "0.3.5" 
async-std = "1.6.3"
actix-web = "2"
actix-rt = "1.0"
